umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_np.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {:atoms ["Np#n#u5"] :bonds [] :charge 0 :spin "#u5#s6"}
    :success true}
  :counts {
    :output {:atoms ["Np#n3#u"] :bonds [] :charge 0 :spin "#u1#s2"}
    :success true}}
