umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_pa.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Pa#n#u3"] :bonds []} :success true}
  :counts {:output {:atoms ["Pa#n2#u"] :bonds []} :success true}}
