umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@atoms_pm.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {:output {:atoms ["Pm#n#u5"] :bonds []} :success true}
  :counts {:output {:atoms ["Pm#n3#u"] :bonds []} :success true}}
